# WAVE

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CONCEPT.md  CONCEPT_EN.md  LICENSE  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
examples/: wave_demo.py
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: test_wave_propagation.py
wave_propagation/: __init__.py  contracts.py  ecosystem_bridges.py  foundation.py  gravitational_wave.py  oscillator.py  seismic.py  surface_acoustic.py  wave_equation.py
